--- a/style.css
+++ b/style.css
@@ -208,6 +208,10 @@ hr
 .service-head{
 
 	height: 50px;
+	margin-top: 50px;
+}
+.about-head{
+	margin-top: 50px;
 }
 .sub-body{
 	position: relative;
@@ -242,7 +246,7 @@ hr
     font-size: 20px !important;
 }
 .bg-color{
-  background-color: #000;
+  background-color: #222222;
 }
 .copyright{
   background-color: #111;
@@ -274,15 +278,13 @@ hr
 .ctg-logo{
 	width: 4vw;
     height: 4vw;
-    position: absolute;
-    right: 7%;
 }
 .about-cont{
 	padding: 10px;
 	text-align: center;
 }
 .para_about{
-	font-size: 20px;
+	font-size: 17px;
 	padding-left: 30px;
     padding-right: 30px;
 }
@@ -290,7 +292,104 @@ hr
 {
 	display: none;
 }
-@media screen and (max-width: 486px){
+.menu-ul{
+	text-decoration: none;
+	list-style-type: none !important;
+	padding-left: 0px !important;
+}
+.list-item{
+	padding: 06px;
+	text-align: left;
+}
+.list-item a{
+	color: rgba(255, 255, 255, 0.5);
+}
+.ficon{
+	padding: 0px 6px 0px 0px;
+}
+.list-item a:hover{
+	text-decoration: none;
+	color: #fff;
+}
+.width-50{
+
+	width: 75%;
+}
+.fa-3x{
+	font-size: 2.5em !important;
+}
+.main-headers{
+
+	color: #555;
+	font-weight: bold;
+    letter-spacing: 2px;
+}
+.dev-img{
+
+	background-image: url("Image/dev.jpeg");
+	background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 30vh;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+.legal-img{
+
+	background-image: url("Image/legal.jpeg");
+	background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 30vh;
+    padding: 20px;
+    margin-bottom: 20px;
+
+}
+.seo-img{
+
+	background-image: url("Image/seo.jpeg");
+	background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 30vh;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+.mentor-img{
+
+	background-image: url("Image/mentor.jpeg");
+	background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 30vh;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+.event-img{
+
+	background-image: url("Image/event.jpeg");
+	background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 30vh;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+.brand-img{
+
+	background-image: url("Image/brand.jpeg");
+	background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 30vh;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+.footer{
+
+	margin-top: 25%;
+}
+@media screen and (max-width: 760px){
 
 	.mob-hide{
 
@@ -312,5 +411,7 @@ hr
 		width: 10vw;
     	height: 10vw;
 	}
-
+	.footer{
+		margin-top: 0;
+	}
 }
