--- a/css/style_p2.css
+++ b/css/style_p2.css
@@ -117,4 +117,11 @@ textarea
     {
         width:100%;
     }
+    #form_web{
+        display: none;
+    }
+    #form_mob
+    {
+        display:block !important;
+    }
   }
