--- a/Assests/css/service.css
+++ b/Assests/css/service.css
@@ -82,6 +82,8 @@
 	padding: 5px 20px 5px 20px;
 	font-size: 17px;
 	font-family: calibri;
+	background-color: #eae8e9 !important;
+	box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.5);
 }
 @media screen and (max-width:768px){
 
