--- a/style.css
+++ b/style.css
@@ -205,6 +205,90 @@ hr
 
 	display: none;
 }
+.pickup-line{
+	padding: 30px 50px;
+    margin: 0 10%;
+    letter-spacing: 1px;
+    text-align: center;
+}
+.pickup-para{
+	color: #ffffff;
+	font-size: 20px;
+	line-height: 1.8;
+}
+section {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+  section::after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 80%;
+  
+}
+.scrolldown a span{
+
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 30px;
+  height: 50px;
+  margin-left: -15px;
+  border: 2px solid #fff;
+  border-radius: 50px;
+  box-sizing: border-box;
+}
+.scrolldown a span::before {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  content: '';
+  width: 6px;
+  height: 6px;
+  margin-left: -3px;
+  background-color: #fff;
+  border-radius: 100%;
+  -webkit-animation: sdb10 2s infinite;
+  animation: sdb10 2s infinite;
+  box-sizing: border-box;
+}
+
+@-webkit-keyframes sdb10 {
+  0% {
+    -webkit-transform: translate(0, 0);
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    -webkit-transform: translate(0, 20px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes sdb10 {
+  0% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  80% {
+    transform: translate(0, 20px);
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 .service-head{
 
 	height: 50px;
@@ -394,9 +478,6 @@ hr
 	.mob-hide{
 
 		display: none;
-	}
-	.content_overlay{
-		background:rgba(40,23,56,0.6);
 	}
 	.video_bg
 	{
