--- a/Assests/css/service.css
+++ b/Assests/css/service.css
@@ -10,6 +10,9 @@
 
 	background-color: #2B2B2B !important;
 }
+.nav>li{
+	padding: 0px 10px;
+}
 .service-figure{
 	width: 100%;
 	height: 50vh;
@@ -75,7 +78,7 @@
 }
 .get-in-touch{
 	padding: 25px 25px 0px 25px;
-	text-align: right;
+	text-align: left;
 }
 .button-touch{
 	color: #555;
