--- a/style.css
+++ b/style.css
@@ -508,4 +508,10 @@ section {
 		padding: 0;
 		font-size: 12px;
 	}
+	.overlay_content h1{
+		font-size: 8vw;
+	}
+	.col-sm-4{
+		padding: 0px !important;
+	}
 }
